# OBLIVION

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.py  config.py  oblivion.py  requirements.txt
android-agent/app/src/main/: AndroidManifest.xml
android-agent/app/src/main/cpp/: CMakeLists.txt  oblivion_core_engine.cpp  oblivion_engine.cpp  oblivion_ultimate_engine.cpp  oblivion_ultimate_engine.h  zero_click_agent.cpp
android-agent/app/src/main/cpp/core/: engine.cpp
android-agent/app/src/main/java/com/oblivion/agent/: BootReceiver.java  MainActivity.java  NotificationListener.java  PhoenixService.java  PhoneStateReceiver.java  SmsReceiver.java  ZeroClickAgent.java
android-agent/app/src/main/res/layout/: activity_main.xml
android-agent/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
android-agent/app/src/main/res/xml/: accessibility_config.xml
backend/: app.py
backend/src/api/: routes.py
backend/src/database/: db.py
backend/src/models/: __init__.py  alert.py  command.py  device.py
backend/src/websocket/: __init__.py  server.py
tools/: command_center.py  exploit_DNG_20260703_140840.dng  whatsapp_zero_click.py  zero_click_delivery.py
tools/exploit_generator/: zero_click.py
